<resources>
    <string name="app_name">MyFirstAidKit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My First Aid Kit</string>
    <string name="nav_header_subtitle">username</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_account">Cuenta</string>
    <string name="action_logout">Cerrar sesión</string>

    <string name="button_login">Iniciar sesión</string>
    <string name="button_view_now">View now</string>
    <string name="button_treatments">Tratamientos</string>
    <string name="button_FAK">Mi botiquín</string>
    <string name="button_settings">Ajustes</string>
    <string name="button_account">Cuenta</string>

    <string name="txt_now">View now</string>
    <string name="txt_treatments">Tratamientos</string>
    <string name="txt_fak">Mi botiquín</string>
    <string name="txt_settings">Ajustes</string>
    <string name="txt_account">Cuenta</string>

    <string name="user_image">User image or default avatar</string>
    <string name="txt_username">Nombre de usuario</string>
    <string name="txt_username_hint">Nombre de usuario</string>
    <string name="autofillDescription">Nombre de usuario</string>
    <string name="txt_pwd">Contraseña</string>
    <string name="txt_pwd_2">Repetir contraseña</string>
    <string name="btn_sign_in">Iniciar sesión</string>
    <string name="btn_sign_up">Registrarse</string>

    <string name="txt_email">Email</string>

    <string name="btn_done">Hecho</string>
    <string name="btn_del">Eliminar</string>
    <string name="btn_cancel">Cancelar</string>

    <string name="startDate">Fecha de inicio</string>
    <string name="endDate">Fecha de finalización</string>
    <string name="doses1">Una dosis cada</string>
    <string name="doses2">horas</string>
    <string name="medicinesInTreatment">Lista de medicinas</string>

    <string name="acc_chpwd">Cambiar contraseña</string>
    <string name="acc_del">Eliminar la cuenta</string>
    <string name="acc_logout">Cerrar sesión</string>

    <string name="edit_treatment_name">Nombre del tratamiento</string>
    <string name="edit_treatment_lbl_medicine">Selecciona una medicina</string>
    <string name="edit_treatment_lbl_medicine2">Selecciona una fecha de finalización</string>
    <string name="edit_treatment_lbl_medicine3">Añadir medicina</string>
    <string name="edit_treatment_lbl_freq">Cada</string>
    <string name="edit_treatment_lbl_freq_unit">horas</string>
    <string name="edit_treatment_txt_num">0</string>
    <string name="edit_treatment_txt_date">01/05/2019</string>
    <string name="edit_treatment_btn_add">+</string>

    <string name="edit_medicine_name">Nombre</string>
    <string name="edit_medicine_lbl_type">Tipo</string>
    <string name="edit_medicine_txt_num">Cantidad</string>
    <string name="edit_medicine_txt_exp_date">Fecha de expiración</string>
    <string name="edit_medicine_txt_end_date">Fecha de finalización</string>

    <string name="settings_lbl_notif">Notificaciones</string>
    <string name="settings_lbl_alert">Alertas</string>
    <string name="settings_txt_num_min">15</string>
    <string name="settings_lbl_tmp_unit">minutos</string>
    <string name="settings_lbl_theme">Tema oscuro</string>
    <string name="settings_btn_rad_def">Por defecto</string>
    <string name="settings_btn_rad_dark">Oscuro</string>
    <string name="settings_btn_rad_light">Claro</string>

    <string name="acc_lbl_chpwd">Cambiar la contraseña</string>
    <string name="acc_lbl_del">Eliminar la cuenta</string>

    <string name="text_del_acc">Escribe tu contraseña\ndebajo para confirmar tu decisión</string>

    <string name="init_lbl_login">Log in or sign up to start\nmanaging your first aid kit</string>


    <string-array name="medicine_types">
        <item>Pastillas</item>
        <item>Jarabe</item>
    </string-array>

    <string-array name="treatment_types">
        <item>Activos</item>
        <item>Terminados</item>
        <item>Todos</item>
    </string-array>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_medicines">Botiquín</string>
    <string name="title_treatments">Tratamientos</string>
    <string name="title_account">Cuenta</string>
    <string name="title_notifications">Notificaciones</string>

    <string name="title_activity_logged">LoggedActivity</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="invalidFieldsTitle">Campos inválidos</string>
    <string name="invalidFieldsMessage">Todos los campos deben rellenarse.</string>
    <string name="apiErrorTitle">Algo ha salido mal…</string>
    <string name="apiLoginErrorMessage">No existe un usuario con esa contraseña, por favor inténtalo de nuevo.</string>
    <string name="apiResetPasswordErrorMessage">La contraseña introducida no es correcta, por favor inténtalo de nuevo.</string>
    <string name="apiResetPasswordMatchErrorMessage">Los dos campos de nueva contraseña deben ser iguales, por favor inténtalo de nuevo.</string>
    <string name="apiRegisterMatchErrorMessage">Los dos campos de contraseña deben ser iguales, por favor inténtalo de nuevo.</string>

    <string name="sincronizar">Sincronizar</string>
    <string name="nuevo">Nuevo</string>


    <string name="agotado">AGOTADO</string>
    <string name="caducado">CADUCADO</string>
</resources>
